--- a/source/translations/lib/en.json
+++ b/source/translations/lib/en.json
@@ -1,8 +1,8 @@
 {
   "templates.email.greeting": "Hi, USER_NAME,",
-  "templates.email.signature": "The DemocracyOS team.",
+  "templates.email.signature": "The Comunas Participativas team.",
 
-  "templates.welcome-email.subject": "Welcome to DemocracyOS!",
+  "templates.welcome-email.subject": "Welcome!",
   "templates.welcome-email.body": "Please <a href=\"VALIDATE_MAIL_URL\">click here</a> to validate your email address.",
   "templates.welcome-email.ps": "PS: if you didn't sign up, please ignore this email.",
 
