--- a/source/translations/lib/es.json
+++ b/source/translations/lib/es.json
@@ -3,7 +3,8 @@
   "templates.email.signature": "El equipo de Comunas Participativas.",
 
   "templates.welcome-email.subject": "¡Bienvenid@!",
-  "templates.welcome-email.body": "Por favor <a href=\"VALIDATE_MAIL_URL\">cliquea aquí</a> para validar tu dirección de correo electrónico.",
+  "templates.welcome-email.body": "¡Bienvenid@ a Comunas Participativas! A través de esta herramienta vas a poder sumar ideas, opinar y votar ideas de otras personas para mejorar el barrio de Palermo.",
+  "templates.welcome-email.body2": "Por favor <a href=\"VALIDATE_MAIL_URL\">cliquea aquí</a> para validar tu dirección de correo electrónico y empezar a participar.",
   "templates.welcome-email.ps": "P.D.: si no creaste una cuenta, por favor ignora este correo.",
 
   "templates.forgot-password.subject": "Reestablecer contraseña",
